--- a/index3.html
+++ b/index3.html
@@ -237,6 +237,10 @@
             <input type="file" class="form-control" id="animalPhoto" accept="image/*" required>
             <div class="form-text">Загрузите фотографию пропавшего животного.</div>
           </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" id="dataAgreementCheck" required>
+            <label class="form-check-label" for="dataAgreementCheck" style="color: black;">Я соглашаюсь на обработку данных</label>
+          </div>
           <button type="submit" class="btn btn-primary">Подать заявление</button>
         </form>
       </div>
