--- a/index2.html
+++ b/index2.html
@@ -219,15 +219,23 @@
       <button onclick="searchAds()">Найти</button>
     </div>
 
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      </ul>
+    </nav>
     <div id="adsContainer">
-      <!-- Объявления появятся здесь -->
     </div>
   </main>
 
   <footer class="border-bottom bg-primary">
     <p class="text-white p-3" style="text-align: center;">GET PET BACK © Copyright, 2022 Все права защищены</p>
   </footer>
-
+  
   <script>
     const ads = [
       {
